Thu Jan 24 11:43:47 2013  Narihiro Nakamura  <authornari@gmail.com>

	* eval.c (f_current_dirname): Add documentation about "__dir__
	  returns always an absolute path". [Bug #7729]

Thu Jan 24 10:28:30 2013  Eric Hodel  <drbrain@segment7.net>

	* NEWS (RDoc):  Added mention of page support and markdown support.

Thu Jan 24 09:40:13 2013  Eric Hodel  <drbrain@segment7.net>

	* doc/syntax/refinements.rdoc:  Added refinements document based on
	  the specification from the wiki.
	* doc/syntax.rdoc:  Added link to refinements document.

Wed Jan 23 16:29:09 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/win32.c (rb_w32_spawn, rb_w32_aspawn_flags): fix missing
	  initialization.  pointed out by phasis68 (Heesob Park) at
	  [ruby-core:51579].  [Bug #7721]

Wed Jan 23 16:18:04 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (MakeMakefile#try_constant): fix for large unsigned.

	* lib/mkmf.rb (MakeMakefile#try_constant): fix for larger constants.

	* test/mkmf/test_constant.rb: tests for try_constant.
	  TODO: define check_constant and use it.

Wed Jan 23 13:35:37 2013  Koichi Sasada  <ko1@atdot.net>

	* thread_pthread.c (ruby_init_stack): ignore `STACK_END_ADDRESS'
	  if Ruby interpreter is running on co-routine.
	  [Feature #2294]
	  https://bugs.ruby-lang.org/issues/2294#note-18

Wed Jan 23 12:28:22 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/win32.c (rb_w32_spawn, rb_w32_aspawn_flags): check the results
	  of acp_to_wstr() which can return NULL.  [ruby-core:51557] [Bug #7721]

Wed Jan 23 10:40:49 2013  Eric Hodel  <drbrain@segment7.net>

	* doc/syntax/assignment.rdoc (Implicit Array Assignment):  Clarify
	  that "left-hand side" means "of the assignment".  Suggested by Jorge
	  Dias.
	* doc/syntax/assignment.rdoc (Multiple Assignment):  ditto.

Wed Jan 23 10:34:47 2013  Eric Hodel  <drbrain@segment7.net>

	* doc/syntax/assignment.rdoc (Local Variables and Methods):  Fixed